force-app/main/default/objects/fferpcore__TestPublication__c/fields/fferpcore__MessageBody__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageBody__c</fullName>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>