force-app/main/default/objects/fferpcore__TestPublication__c/fields/fferpcore__MessageType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Message Type</label>
    <referenceTo>fferpcore__MessageType__c</referenceTo>
    <relationshipLabel>Test Mode Publications</relationshipLabel>
    <relationshipName>Test_Publications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>